Changed both API and GO files to handle setUsername, setMyPhoto, and getMyConversations operations differently: now they all depend on the user that is currently logged in, and return StatusForbidden if no user is logged in.
